# serializer version: 1
# name: test_airzone_create_selects[select.dormitorio_air_quality_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.dormitorio_air_quality_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air Quality mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air Quality mode',
    'platform': 'airzone_cloud',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'air_quality',
    'unique_id': 'zone2_aq-mode-conf',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_selects[select.dormitorio_air_quality_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dormitorio Air Quality mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dormitorio_air_quality_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_airzone_create_selects[select.salon_air_quality_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.salon_air_quality_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Air Quality mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Air Quality mode',
    'platform': 'airzone_cloud',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'air_quality',
    'unique_id': 'zone1_aq-mode-conf',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_selects[select.salon_air_quality_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Salon Air Quality mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.salon_air_quality_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_airzone_create_selects[select.salon_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cool',
        'dry',
        'fan',
        'heat',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.salon_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mode',
    'platform': 'airzone_cloud',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'modes',
    'unique_id': 'zone1_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_airzone_create_selects[select.salon_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Salon Mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cool',
        'dry',
        'fan',
        'heat',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.salon_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
